--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.131.0",
+    "@aws-sdk/s3-presigned-post": "^3.131.0",
+    "@aws-sdk/s3-request-presigner": "^3.131.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
@@ -17,8 +20,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.7",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "postcss": "^8.4.14",
+    "tailwindcss": "^3.1.6"
   },
   "eslintConfig": {
     "root": true,
